--- a/naj_ul_balagha/pubspec.yaml
+++ b/naj_ul_balagha/pubspec.yaml
@@ -39,15 +39,15 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
   google_sign_in: ^6.1.2
-  intl: ^0.17.0
+  intl: 
   cloud_firestore: ^4.7.1
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
-  google_language_fonts: ^2.0.0
-  persian_fonts: ^1.0.5
   flutter_localizations:
     sdk: flutter
   golden_toolkit: ^0.15.0
+  mockito: ^5.4.1
+  alchemist: ^0.6.1
 
 dev_dependencies:
   flutter_test:
