--- a/naj_ul_balagha/pubspec.yaml
+++ b/naj_ul_balagha/pubspec.yaml
@@ -39,16 +39,19 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
   google_sign_in: ^6.1.2
-  intl: 
+  # intl: 
   cloud_firestore: ^4.7.1
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
-  golden_toolkit: ^0.15.0
-  mockito: ^5.4.0
+  # golden_toolkit: ^0.15.0
+  # mockito: ^5.4.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
+  # share_plus: ^7.1.0
+  font_awesome_flutter: ^10.5.0
+  flutter_share_me: ^1.4.0
 
 dev_dependencies:
   flutter_test:
