--- a/naj_ul_balagha/pubspec.yaml
+++ b/naj_ul_balagha/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
   google_sign_in: ^6.1.2
-  # intl: 
+  intl: 
   cloud_firestore: ^4.7.1
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
